--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,15 @@
 Host *
 ControlMaster auto
 ControlPath ~/.ssh/master-%r@%h:%p
+
+Host b1
+     HostName b-124-1.centtech.com
+     User dluu
+
+Host b2
+     HostName b-124-2.centtech.com
+     User dluu
+
+Host b3
+     HostName b-124-3.centtech.com
+     User dluu
