--- a/.ssh/config
+++ b/.ssh/config
@@ -19,6 +19,11 @@ Host 00
      HostName 00.centtech.com
      User dluu
 
+Host l
+     HostName lark20.centtech.com
+     User dluu
+
+
 Host esel
      HostName 128.83.198.179
      User d
