--- a/.ssh/config
+++ b/.ssh/config
@@ -1,6 +1,6 @@
 Host *
-ControlMaster auto
-ControlPath ~/.ssh/master-%r@%h:%p
+#ControlMaster auto
+#ControlPath ~/.ssh/master-%r@%h:%p
 Cipher arcfour
 
 Host b1
@@ -27,3 +27,9 @@ Host l
 Host esel
      HostName 128.83.198.179
      User d
+
+Host ws0 
+     HostName  esx-ws-0.centtech.com
+     ControlMaster no
+     User dluu
+     
