X11 forward / control master auto

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,6 +1,7 @@
 Host *
-#ControlMaster auto
-#ControlPath ~/.ssh/master-%r@%h:%p
+ControlMaster auto
+ControlPath ~/.ssh/master-%r@%h:%p
+ForwardX11 yes
 Cipher arcfour
 
 Host b1
