lark13 and nehalem

--- a/.ssh/config
+++ b/.ssh/config
@@ -4,6 +4,14 @@ ControlPath ~/.ssh/master-%r@%h:%p
 ForwardX11 yes
 Cipher arcfour
 
+Host l13
+     HostName lark13.centtech.com
+     User dluu
+
+Host neh
+     HostName nehalem.centtech.com
+     User dluu
+
 Host b1
      HostName b-124-1.centtech.com
      User dluu
